Fixed size and alignment issues

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
@@ -458,9 +458,8 @@
                         display: inline-block;
                         text-align: center;
                         margin-bottom: rem(20);
-                        width: rem(120);
-                        min-width: rem(120);
-                        max-width: rem(120);
+                        width: 50%;
+                        min-width: 50%;
                         line-height: rem(24);
                         flex: 1;
 
@@ -645,6 +644,7 @@
             }
 
             &-container {
+
                 > div {
                     opacity: 0;
                     visibility: hidden;
@@ -936,6 +936,7 @@
                     align-items: center;
                     padding: 5px 10px;
                     margin-right: 10px;
+                    min-width: fit-content;
                 }
 
                 .mobile-filter-sort-redesign {
@@ -1283,7 +1284,7 @@
                     width: rem(70);
                     height: rem(70);
                     border-radius: 50%;
-                    border: rem(1) solid $light-gray9;
+                    border: none;
                     margin: auto auto rem(10);
 
                     &.selected-swatch-image {
@@ -2205,6 +2206,7 @@
                             min-height: fit-content;
                             max-height: fit-content;
                             min-width: fit-content;
+                            overflow: hidden;
 
                             .color-swatch {
                                 width: 33.3%;
